corpus/Coffee_Souffle.txt
================================================================================
Coffee Souffle
================================================================================
-- make caramel

Crack the @egg yoke{1} into a bowl, then add the @condenced milk{125%g} and @instant coffee{3tsp}, and mix until a nice caramel is formed. Do not allow to bubble.

Pour into a #bowl and leave to cool down for ~{15%minutes}.

heat @water{1,1/2cups} and @gelatine{3tsp} then stir till gelatine is dissolved completely.Once gelatine is colled down mix it with the caramel.

Beat @eggwhite{1} until formy. Then mix the whites bit by bit to the the gelatinecaramel mixture.


Pour into a #puddingbowl and leave in fridge for 2 hours minimum. Add some @cashew{60%g} and enjoy!

--------------------------------------------------------------------------------

(recipe
  (comment_line)
  (step
    (text)
    (ingredient
      (name)
      (quantity))
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)
    (ingredient
      (name)
      (quantity))
    (text))
  (step
    (text)
    (cookware
      (name))
    (text)
    (timer
      (quantity)
      (unit))
    (text))
  (step
    (text)
    (ingredient
      (name)
      (quantity))
    (text)
    (ingredient
      (name)
      (quantity))
    (text))
  (step
    (text)
    (ingredient
      (name)
      (quantity))
    (text))
  (step
    (text)
    (cookware
      (name))
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)))
