corpus/Easy_Pancakes.txt
================================================================================
Easy Pancakes
================================================================================
-- TODO add source

Crack the @eggs{3} into a blender, then add the @flour{125%g}, @milk{250%ml} and @sea salt{1%pinch}, and blitz until smooth.

Pour into a #bowl and leave to stand for ~{15%minutes}.

Melt the butter (or a drizzle of @oil if you want to be a bit healthier) in a #large non-stick frying pan{} on a medium heat, then tilt the pan so the butter coats the surface.

Pour in 1 ladle of batter and tilt again, so that the batter spreads all over the base, then cook for 1 to 2 minutes, or until it starts to come away from the sides.

Once golden underneath, flip the pancake over and cook for 1 further minute, or until cooked through.

Serve straightaway with your favourite topping.

--------------------------------------------------------------------------------

(recipe
  (comment_line)
  (step
    (text)
    (ingredient
      (name)
      (quantity))
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text))
  (step
    (text)
    (cookware
      (name))
    (text)
    (timer
      (quantity)
      (unit))
    (text))
  (step
    (text)
    (ingredient
      (name))
    (text)
    (cookware
      (name))
    (text))
  (step
    (text))
  (step
    (text))
  (step
    (text)))
