corpus/Fried Rice.txt
================================================================================
Fried Rice
================================================================================


-- TODO add source

Mix together @oyster sauce{1%tbsp}, @soy sauce{5%tbsp} and @sesame oil{5%tsp}, set aside.

Heat @peanut oil{1%tbsp} in a wok or heavy based skillet/fry pan over medium heat. Add @eggs{2%items} and cook until scrambled, then remove onto plate.

Increase heat to high and add chopped @bacon{75%cup}, excess fat trimmed. Cook until golden, then remove onto plate with egg - about 2 minutes.

Drain off excess bacon fat.

Add remaining @peanut oil{2%tbsp}, minced @garlic{2%gloves} and @ginger{3%tsp}. Return wok to stove on high heat. Stir fry as it comes up to heat, don’t let it burn. When garlic starts to sizzle, add finally chopped @onion{2%medium} and stir fry for 2 minutes until golden.

Add @Chinese cooking wine{1%tbsp} and @sugar{2%tsp} and let it simmer rapidly, stirring, for 20 seconds, until mostly evaporated.

Add @prawns{150%g} and stir fry for 1 minute to heat through if pre-cooked, cook longer to cook if raw.

Add refrigerated overnight @cooked rice{3%cups}, Sauce, eggs, bacon and thinly sliced @scallions{5%items}. Stir fry for 2 minutes until rice is hot - around 2 minutes.

Transfer to serving plate, sprinkle with thinly sliced @scallions{2%items} and serve.

--------------------------------------------------------------------------------

(recipe
  (comment_line)
  (step
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text))
  (step
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text))
  (step
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text))
  (step
    (text))
  (step
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text))
  (step
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text))
  (step
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text))
  (step
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text))
  (step
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)))
