corpus/Olivier Salad.txt
================================================================================
Oliver Salad
================================================================================

-- TODO add source

Zero step is cook @corn beef{1%kg}. Put into a large pan and simmer for ~{2%hours}.

The first step is to cook your @potatoes{3%medium} and @carrots{3%medium}. I used a steamer, but you can always go the traditional route and boil them. In either case, peel the carrots but not the potatoes.

Steam the potatoes for ~{30%minutes} to start with, and then add the peeled carrots. Continue steaming for 10-15 more minutes, or until the potatoes and carrots are firm but tender when poked.

Meanwhile, cook your @frozen peas{1%cup} according to package directions. I use the kind that can be steamed in the package in the microwave. When they are done, set them aside to cool.

When the potatoes and carrots are done, allow them to cool to the point that you can handle them easily.

Peel the potatoes. Using your fingers or the back of a knife, gently scrape the thin layer of skin off of the potatoes. Dice them into 1cm cube-ish shapes and put them into a medium serving bowl.

Next, dice your carrots. I've heard it said that a Soviet housewife could be judged on her housekeeping skills by how finely she could dice vegetables for her soups and salads. I, however, won't judge you. In fact, if you chop your potatoes and carrots a little larger, I would probably even thank you. I happen to like chunky salads.

Toss the carrots and a cup of steamed peas into the bowl with the potatoes.

Peel and dice your hardboiled @eggs{4}. Again, I know some like to have their salads with finely diced ingredients, but I don't. So dice them however you like.

Chop @pickles{6} finely. I used small snacking dill pickles, so I needed to use six of them. If you have larger pickles, try using three and see if that is enough for you.

Add the meat if using and mix everything together gently before you add the @mayonnaise{1%cup}.

Stir in one cup of mayo to start with, and add more if you think that the salad needs more binding together.

Cover the salad and chill for at least one hour or overnight to allow the flavors to come together. And of course, garnish with finelly chopped @dill{1%tbsp}. This is a Russian salad, after all.


--------------------------------------------------------------------------------

(recipe
  (comment_line)
  (step
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)
    (timer
      (quantity)
      (unit))
    (text))
  (step
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text))
  (step
    (text)
    (timer
      (quantity)
      (unit))
    (text))
  (step
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text))
  (step
    (text))
  (step
    (text))
  (step
    (text))
  (step
    (text))
  (step
    (text)
    (ingredient
      (name)
      (quantity))
    (text))
  (step
    (text)
    (ingredient
      (name)
      (quantity))
    (text))
  (step
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text))
  (step
    (text))
  (step
    (text)
    (ingredient
      (name)
      (quantity)
      (unit))
    (text)))
