corpus/comments.txt
================================================================================
Comments
================================================================================

>> foo[-foo--?-]:bar-- BAR

>> ba/r: fo-o

--------------------------------------------------------------------------------

(recipe
  (metadata
    (metadata_key)
    (comment_block)
    (metadata_value)
    (comment_line))
  (metadata
    (metadata_key)
    (metadata_value)))
